# connex

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  load_test.rs  load_test_monitor.rs  load_test_utils.rs  logging.rs  main.rs  monitoring.rs  stats.rs  utils.rs
src/lib/components/: Charts.svelte  LoadTestConfig.svelte  RealTimeMetrics.svelte  TestResults.svelte
src/routes/: +page.svelte
